
* GITHUB#14272: Use DocIdSetIterator#range for continuous-id BKD leaves. (Guo Feng)

* GITHUB#14338: Deduplicate BKDConfig records in BKDReader. (Ignacio Vera)

* GITHUB#14301: Avoid unnecessary evaluations and skipping documents. (hanbj)

# GITHUB#14203: Decode doc ids in BKD leaves with auto-vectorized loops when using DEFAULT_MAX_POINTS_IN_LEAF_NODE. (Guo Feng)

Bug Fixes
---------------------

* GITHUB#14109: prefetch may select the wrong memory segment for
  multi-segment slices. (Chris Hegarty)

* GITHUB#14123: SortingCodecReader NPE when segment has no (points, vectors, etc...) (Mike Sokolov)

* GITHUB#14126: Avoid overflow in index input slices invariant checks
  (Chris Hegarty)

* GITHUB#14215: Fix degenerate case in HNSW where all vectors have the same score. (Ben Trent)

* GITHUB#14320: Fix DirectIOIndexInput seek to not read when position is within buffer (Chris Hegarty)

Changes in Runtime Behavior
---------------------
* GITHUB#14189: Bump floor segment size to 16MB in TieredMergePolicy and
  LogByteSizeMergePolicy. (Adrien Grand)

Other
---------------------

* GITHUB#14081: Fix urls describing why NIOFS is not recommended for Windows (Marcel Yeonghyeon Ko)

* GITHUB#14116 Use CDL to block threads to avoid flaky tests. (Ao Li)

* GITHUB#14091: Cover all DataType. (Lu Xugang)

* GITHUB#14130: Upgrade OpenNLP from 2.3.2 to 2.5.3, which transitively upgrades Slf4j
  from 1.7.36 to 2.0.16. (Michael Froh)

* GITHUB#14223 : Fixed a flaky test TestKnnFloatVectorQuery.testFindFewer (Navneet Verma)

* GITHUB#14279 : Add github action to verify changelog entry and set milestone to PRs. (Amir Raza)

======================= Lucene 10.1.0 =======================

API Changes
---------------------

* GITHUB#13859: Allow open-ended ranges in Intervals range queries. (Mayya Sharipova)

* GITHUB#13950: Make BooleanQuery#getClauses public and add #add(Collection<BooleanClause>) to BQ builder. (Shubham Chaudhary)
